--- a/sass/blocks/constructor.scss
+++ b/sass/blocks/constructor.scss
@@ -94,6 +94,11 @@
       font-weight: 600;
     }
   }
+
+  &__dop {
+    font-size: 14px;
+    font-weight: 600;
+  }
 }
 
 .constructor-total-model,
