--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,5 +11,8 @@
 @import 'blocks/delivery.scss';
 @import 'blocks/constructor.scss';
 @import 'blocks/territory.scss';
+@import 'blocks/also.scss';
 @import 'blocks/question.scss';
+@import 'blocks/breadcrumbs.scss';
+@import 'blocks/gallery.scss';
 @import 'blocks/footer.scss';
