--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -5,6 +5,10 @@ body {
   color: $black-color;
 }
 
+.overflow {
+  overflow-y: hidden;
+}
+
 .link {
   position: relative;
   text-decoration: none;
@@ -19,6 +23,19 @@ body {
     height: 1.5px;
     background-color: $main-color;
     transition: 0.6s;
+  }
+
+  &_current {
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: -10px;
+      width: 100%;
+      height: 1.5px;
+      background-color: $main-color;
+      transition: 0.6s;
+    }
   }
 
   &:hover {
