--- a/sass/blocks/banner.scss
+++ b/sass/blocks/banner.scss
@@ -1,5 +1,5 @@
 .banner {
-  background-image: url(../img/bg-2.jpg);
+  background-image: url(../img/bg-3.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
@@ -22,26 +22,39 @@
     width: 1.5px;
     height: 100%;
     background-color: white;
-  }
-
-  h1 {
-    font-size: 48px;
-    font-style: normal;
-    font-weight: 600;
 
     @media screen and (max-width: 991px) {
-      font-size: 35px;
+      width: 100%;
+      height: 1px;
     }
   }
 
-  h2 {
+  h1 {
     font-size: 40px;
     font-style: normal;
     font-weight: 600;
 
     @media screen and (max-width: 991px) {
-      font-size: 25px;
-      font-weight: 400;
+      font-size: 30px;
+    }
+  }
+
+  h2 {
+    // font-size: 40px;
+    // font-style: normal;
+    // font-weight: 600;
+
+    // @media screen and (max-width: 991px) {
+    //   font-size: 25px;
+    //   font-weight: 400;
+    // }
+
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 600;
+
+    @media screen and (max-width: 991px) {
+      font-size: 30px;
     }
   }
 }
