--- a/sass/blocks/burger.scss
+++ b/sass/blocks/burger.scss
@@ -1,5 +1,6 @@
 .burger-btn {
   position: relative;
+  z-index: 2000;
   width: 25px;
   height: 1.5px;
   background-color: white;
@@ -40,5 +41,137 @@
       transform: rotate(-45deg);
       background-color: $main-color;
     }
+  }
+}
+
+.burger-menu {
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  right: -100%;
+  width: 70%;
+  height: 100%;
+  padding: 30px;
+  background-color: $main-grey;
+  transition: 0.8s;
+  overflow-y: scroll;
+
+  @media screen and (max-width: 991px) {
+    width: 50%;
+  }
+
+  @media screen and (max-width: 640px) {
+    width: 70%;
+  }
+
+  @media screen and (max-width: 475px) {
+    width: 80%;
+  }
+
+  @media screen and (max-width: 325px) {
+    width: 90%;
+  }
+
+  &_active {
+    right: 0;
+  }
+
+  &__list {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: $gap-m;
+    padding-top: 50px;
+    padding-bottom: 30px;
+
+    li {
+      a {
+        text-decoration: none;
+        color: $black-color;
+        font-weight: 600;
+      }
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      display: block;
+      width: 100%;
+      height: 0.5px;
+      background-color: $black-color;
+    }
+  }
+
+  &__contact {
+    padding-top: 10px;
+    font-size: 14px;
+
+    h3 {
+      font-size: 16px;
+      font-weight: 600;
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+  }
+
+  &__wrap-elem {
+    padding-bottom: 10px;
+
+    a {
+      color: $black-color;
+      text-decoration: none;
+    }
+  }
+
+  &__info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+.burger-close {
+  position: relative;
+  z-index: 2000;
+  width: 25px;
+  height: 1.5px;
+  background-color: rgba(0, 0, 0, 0);
+  cursor: pointer;
+
+  &::before {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 1.5px;
+    top: 0;
+    transform: rotate(45deg);
+    background-color: $black-color;
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 1.5px;
+    top: 0;
+    transform: rotate(-45deg);
+    background-color: $black-color;
+  }
+}
+
+.background {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba($color: #000000, $alpha: 0.5);
+  opacity: 0;
+  transition: 0.8s;
+
+  &_active {
+    z-index: 3;
+    opacity: 1;
   }
 }
