--- a/sass/blocks/product.scss
+++ b/sass/blocks/product.scss
@@ -17,6 +17,7 @@
     img {
       width: 100%;
       height: 290px;
+      border-radius: 6px;
       object-fit: cover;
       transition: 0.4s;
       cursor: pointer;
