feat: add praki to main

--- a/test/sass/style.scss
+++ b/test/sass/style.scss
@@ -11,3 +11,5 @@
 @import 'blocks/pref-block.scss';
 @import 'blocks/question.scss';
 @import 'blocks/mail.scss';
+@import 'blocks/tkani.scss';
+@import 'blocks/circle.scss';
