--- a/test/sass/base/variables.scss
+++ b/test/sass/base/variables.scss
@@ -10,4 +10,15 @@ $gap: 1rem;
 $gap-m: 1.5rem;
 $gap-l: 2rem;
 
+$padding-xs: 0.5rem;
+$padding-s: 0.8rem;
+$padding: 1rem;
+$padding-m: 1.5rem;
+$padding-l: 2rem;
+
+$font-size-s: 0.85rem;
+$font-size: 1rem;
+
 $radius: 25px;
+
+$transition: 0.5s;
