--- a/test/sass/style.scss
+++ b/test/sass/style.scss
@@ -13,3 +13,7 @@
 @import 'blocks/mail.scss';
 @import 'blocks/tkani.scss';
 @import 'blocks/circle.scss';
+@import 'blocks/breadcrumbs.scss';
+@import 'blocks/page.scss';
+@import 'blocks/card-slider.scss';
+@import 'blocks/card.scss';
