feat: add contact.html

--- a/test/sass/style.scss
+++ b/test/sass/style.scss
@@ -18,3 +18,4 @@
 @import 'blocks/card-slider.scss';
 @import 'blocks/card.scss';
 @import 'blocks/card-blog.scss';
+@import 'blocks/contacts.scss';
